# CPU_Render

./: .gitignore  CMakeLists.txt  draw.h  geometry.cpp  geometry.h  gl.cpp  gl.h  main.cpp  model.cpp  model.h  mvp.cpp  mvp.h  output.tga  run.bat  test.cpp  tgaimage.cpp  tgaimage.h
image/: output.tga
